fix: Missing margin for user content in submitted enquiry in some cases

--- a/src/form/render/renderEnquiry.scss
+++ b/src/form/render/renderEnquiry.scss
@@ -4,6 +4,9 @@
   transition: 0.3s height;
   will-change: height;
 }
+._q-pager + * {
+  margin-top: 20px !important;
+}
 ._q-page {
   position: absolute;
   width: 100%;
