--- a/src/form/render/submitted/userInput/userInput.scss
+++ b/src/form/render/submitted/userInput/userInput.scss
@@ -10,7 +10,6 @@
 ._q-user-input {
   display: flex;
   gap: 20px;
-  margin: 0 0 20px !important;
   > div {
     &:first-child {
       flex: 0 0 4px;
